desktop icons alignment fix

--- a/src/components/Desktop/DesktopIcons.module.scss
+++ b/src/components/Desktop/DesktopIcons.module.scss
@@ -1,8 +1,9 @@
-$desktopIconSize: 3.5rem;
+$desktopIconSize: 3rem;
 
 .desktopIcons {
     display: flex;
     flex-direction: column;
+    margin-right: 2rem;
 
     & > :not(:last-child) {
         margin-bottom: 2rem;
